--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,28 @@
 <resources>
-    <string name="app_name">unisoldevtest</string>
+    <string name="app_name">WallpaperInstaller</string>
+
+    <string name="categories">Categories</string>
+    <string name="favorite">Favorite</string>
+    <string name="saved">Saved</string>
+
+    <string name="backgrounds">Backgrounds</string>
+    <string name="fashion">Fashion</string>
+    <string name="nature">Nature</string>
+    <string name="science">Science</string>
+    <string name="education">Education</string>
+    <string name="feelings">Feelings</string>
+    <string name="health">Health</string>
+    <string name="people">People</string>
+    <string name="religion">Religion</string>
+    <string name="places">Places</string>
+    <string name="animals">Animals</string>
+    <string name="industry">Industry</string>
+    <string name="computer">Computer</string>
+    <string name="food">Food</string>
+    <string name="sports">Sports</string>
+    <string name="transportation">Transportation</string>
+    <string name="travel">Travel</string>
+    <string name="buildings">Buildings</string>
+    <string name="business">Business</string>
+    <string name="music">Music</string>
 </resources>
