--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
     <string name="buildings">Buildings</string>
     <string name="business">Business</string>
     <string name="music">Music</string>
+
+    <string name="save">Save</string>
+    <string name="apply">Apply</string>
+
 </resources>
