downloader refactor, bugfix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,9 @@
     <string name="save">Save</string>
     <string name="apply">Apply</string>
 
+
+    <string name="saving">Saving…</string>
+    <string name="failed">Failed</string>
+    <string name="already_saved">Already saved</string>
+
 </resources>
