settings screen, vm

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,21 +29,24 @@
     <string name="save">Save</string>
     <string name="apply">Apply</string>
 
-
     <string name="saving">Saving…</string>
     <string name="applying">Applying…</string>
     <string name="failed">Failed</string>
     <string name="already_saved">Already saved</string>
     <string name="applied">Wallpaper applied</string>
 
-
     <string name="set_home">Set Home Screen</string>
     <string name="set_lock">Set Lock Screen</string>
     <string name="set_both">Set Both</string>
     <string name="set_with">Set With</string>
 
-
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
+
+    <string name="settings">Settings</string>
+    <string name="set_by_system">Set by System</string>
+    <string name="light">Light</string>
+    <string name="dark">Dark</string>
+    <string name="appearance">Appearance</string>
 
 </resources>
